Produzione/force-app/main/default/objects/Utente_Articolo__c/fields/Genitore__c.field-meta.xml
<CustomField>
    <fullName>Genitore__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Se correlato si riferisce a quel commento</description>
    <inlineHelpText>Se correlato si riferisce a quel commento</inlineHelpText>
    <label>Genitore</label>
    <referenceTo>Utente_Articolo__c</referenceTo>
    <relationshipLabel>Utenti Articoli</relationshipLabel>
    <relationshipName>Utenti_Articoli</relationshipName>
    <type>Lookup</type>
</CustomField>