Produzione/force-app/main/default/objects/Utente_Articolo__c/fields/Pubblico__c.field-meta.xml
<CustomField>
    <fullName>Pubblico__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Se pubblico è visto se no no</description>
    <inlineHelpText>Se pubblico è visto se no no</inlineHelpText>
    <label>Pubblico</label>
    <type>Checkbox</type>
</CustomField>