Produzione/force-app/main/default/objects/Utente_Articolo__c/fields/Testo__c.field-meta.xml
<CustomField>
    <fullName>Testo__c</fullName>
    <description>Testo relativo al commento</description>
    <inlineHelpText>Testo relativo al commento</inlineHelpText>
    <label>Testo</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>