Produzione/force-app/main/default/objects/Utente_Articolo__c/fields/Tipologia__c.field-meta.xml
<CustomField>
    <fullName>Tipologia__c</fullName>
    <description>Commento, Like o Visualizzazione</description>
    <inlineHelpText>Commento, Like o Visualizzazione</inlineHelpText>
    <label>Tipologia</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Commento</fullName>
                <default>true</default>
                <label>Commento</label>
            </value>
            <value>
                <fullName>Like</fullName>
            </value>
            <value>
                <fullName>Visualizzazione</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>