Produzione/force-app/main/default/objects/Utente_Articolo__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Articolo__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Pubblico__c</columns>
    <columns>Testo__c</columns>
    <columns>Tipologia__c</columns>
    <columns>Utente__c</columns>
    <filterScope>Everything</filterScope>
    <label>Tutto</label>
</ListView>